--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "mongoose": "^6.6.5",
     "next": "12.3.1",
